<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/homebg"
    tools:context=".view.fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hei_mau_kemana"
                android:layout_marginTop="32dp"
                android:layout_marginStart="12dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="350dp"
                android:layout_height="370dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHei">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLay"
                        android:layout_width="300dp"
                        android:layout_height="98dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:background="@drawable/outline_radius_bg"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/ivPesawat"
                            android:layout_width="19dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_pesawat"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvFrom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="10dp"
                            app:layout_constraintStart_toEndOf="@id/ivPesawat"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvJakarta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jakarta (JKT)"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/tvFrom"/>

                        <View
                            android:id="@+id/viewLine"
                            android:layout_width="215dp"
                            android:layout_height="1dp"
                            android:background="@color/neutral02"
                            android:layout_marginTop="14dp"
                            app:layout_constraintTop_toBottomOf="@id/tvJakarta"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/ivPesawatDuo"
                            android:layout_width="19dp"
                            android:layout_height="17dp"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="14dp"
                            android:src="@drawable/ic_pesawat"
                            app:layout_constraintTop_toBottomOf="@id/viewLine"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="10dp"
                            app:layout_constraintStart_toEndOf="@id/ivPesawat"
                            app:layout_constraintTop_toBottomOf="@id/viewLine"/>
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvMelbourne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Melbourne (MLB)"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintTop_toBottomOf="@id/viewLine"
                            app:layout_constraintStart_toEndOf="@id/tvTo"/>
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_marginEnd="14dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/ic_switch"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pulang_pergi"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="30dp"
                        app:layout_constraintTop_toBottomOf="@id/constraintLay"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/btnSwitch"
                        android:layout_width="40dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/constraintLay"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDepartur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="62dp"
                        android:layout_marginTop="18dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/departure"
                        android:textColor="@color/neutral03"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPp"/>
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivKalender"
                        android:layout_width="19dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="31dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_kalender"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDepartur"/>
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDepature"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        app:layout_constraintStart_toEndOf="@id/ivKalender"
                        app:layout_constraintTop_toBottomOf="@id/tvDepartur"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvReturn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="98dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/returned"
                        android:textColor="@color/neutral03"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnSwitch" />
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivKalenderDua"
                        android:layout_width="19dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_kalender"
                        app:layout_constraintStart_toEndOf="@id/etDepature"
                        app:layout_constraintTop_toBottomOf="@id/tvReturn" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etReturn"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/pilih_tanggal"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="14sp"
                        android:textColor="@color/darkblue04"
                        app:layout_constraintStart_toEndOf="@id/ivKalenderDua"
                        app:layout_constraintTop_toBottomOf="@id/tvReturn"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPassengers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="62dp"
                        android:layout_marginTop="18dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/passengers"
                        android:textColor="@color/neutral03"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etDepature" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivPerson"
                        android:layout_width="19dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="31dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_person"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPassengers" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassengers"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        app:layout_constraintStart_toEndOf="@id/ivPerson"
                        app:layout_constraintTop_toBottomOf="@id/tvPassengers" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="70dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/seat_class"
                        android:textColor="@color/neutral03"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etReturn" />
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivSeat"
                        android:layout_width="19dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="11dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_seat"
                        app:layout_constraintStart_toEndOf="@id/etDepature"
                        app:layout_constraintTop_toBottomOf="@id/tvSeat" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSeat"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        app:layout_constraintStart_toEndOf="@id/ivSeat"
                        app:layout_constraintTop_toBottomOf="@id/tvSeat" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCariPenerbangan"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/darkblue04"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cari_penerbangan"
                android:textAllCaps="false"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDestinasiFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/destinasi_favorite"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCariPenerbangan"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDestinasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDestinasiFavorite"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/destinasi_item"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>